data/all_generated_tests/raw_wast_tests/call_IncorrectBranchTargetResolution_3173.wast
;; 2. **Test 2: Function Call in Loop with Incorrect Index**      Description: Construct a loop within a function where the `call` instruction references a non-existent function index. The test checks whether the implementations correctly handle invalid function indices and whether they correctly resolve the loop exit branch.      Constraint: The function index used in the `call` instruction must be out of bounds.      Relation to Branch Target Resolution: An invalid function index should trap correctly, but handling errors during index checking may lead to incorrect branching within the loop.

(assert_invalid
  (module
    (func $loop-invalid-call-index
      (loop (call 9999 (i32.const 0)))
    )
    (func (param i32))
  )
  "unknown function"
)